--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,6 @@
-name: streamlit-app
+name: GOTW
 channels:
   - conda-forge
 dependencies:
-  - python=3.9
-  - streamlit
   - ambertools
   - biopython
